--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@material-ui/lab": "^4.0.0-alpha.48",
     "classnames": "^2.2.6",
     "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "react-dom": "^16.8.4",
+    "react-github-org-members": "^1.0.0"
   },
   "browserslist": {
     "production": [
